--- a/docs/partial/install.html
+++ b/docs/partial/install.html
@@ -201,7 +201,7 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>How to <a href="https://creativedatasolutions.github.io/dave.minicran/">install</a></p>
+<p>Use <code>dave.minicran</code> to <a href="https://creativedatasolutions.github.io/dave.minicran/">install</a> all <code>R packages</code>.</p>
 
 
 
