--- a/docs/partial/workflows.html
+++ b/docs/partial/workflows.html
@@ -30,7 +30,7 @@ ul.task-list li input[type="checkbox"] {
 <script src="../site_libs/quarto-search/fuse.min.js"></script>
 <script src="../site_libs/quarto-search/quarto-search.js"></script>
 <meta name="quarto:offset" content="../">
-<link href="../partial/data.html" rel="next">
+<link href="../partial/courses.html" rel="next">
 <link href="../partial/quickstart.html" rel="prev">
 <script src="../site_libs/quarto-html/quarto.js"></script>
 <script src="../site_libs/quarto-html/popper.min.js"></script>
@@ -107,6 +107,11 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../partial/install.html" class="sidebar-item-text sidebar-link">Install</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../partial/getting_started.html" class="sidebar-item-text sidebar-link">Introduction</a>
   </div>
 </li>
@@ -118,6 +123,11 @@ ul.task-list li input[type="checkbox"] {
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../partial/workflows.html" class="sidebar-item-text sidebar-link active">Workflows</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Training courses</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -224,11 +234,11 @@ ul.task-list li input[type="checkbox"] {
 </p><pre class="mermaid" data-tooltip-selector="#mermaid-tooltip-1">%%{init: {'theme': 'dark' }%%
 graph LR
 
-    1((1)) --&gt; data["fa:fa-database Data "];
+    1((1)) --&gt; data["fa:fa-database Data #9679;"];
     data --&gt; 2;
-    2((2)) --&gt; preproc["fa:fa-scissors Preprocess "];
-    3((3)) --&gt; plot["fa:fa-braille Plot."];
-    4((4)) --&gt; report["fa:fa-file-text-o Report"];
+    2((2)) --&gt; preproc["fa:fa-scissors Preprocess #9679;"];
+    3((3)) --&gt; plot["fa:fa-braille Plot #9679;"];
+    4((4)) --&gt; report["fa:fa-file-text-o Report #9679;"];
     preproc --&gt; 3;
     preproc --&gt; 4;
 
@@ -270,12 +280,12 @@ graph LR
 <p>
 </p><pre class="mermaid" data-tooltip-selector="#mermaid-tooltip-2">%%{init: {'theme': 'dark'} }%%
 graph LR
-    1((1)) --&gt; preproc["fa:fa-scissors Preprocess"];
-    2((2)) --&gt; calculate("fa:fa-sliders Calculate.");
-    3((3)) --&gt; explore("fa:fa-pencil-square-o Explore.");
-    4((4))  --&gt; plot("fa:fa-bar-chart Plot.")
-    5((5)) --&gt; report("fa:fa-file-text-o Report.");
-    6((6)) --&gt; save("fa:fa-file Save");
+    1((1)) --&gt; preproc["fa:fa-scissors Preprocess #9679;"];
+    2((2)) --&gt; calculate("fa:fa-sliders Calculate #9679;");
+    3((3)) --&gt; explore("fa:fa-pencil-square-o Explore #9679;");
+    4((4))  --&gt; plot("fa:fa-bar-chart Plot #9679;")
+    5((5)) --&gt; report("fa:fa-file-text-o Report #9679;");
+    6((6)) --&gt; save("fa:fa-file Save #9679;");
     preproc --&gt; 4;
     preproc --&gt;5;
     preproc --&gt; 2;
@@ -322,15 +332,15 @@ graph LR
 </p><pre class="mermaid" data-tooltip-selector="#mermaid-tooltip-3">%%{init: {'theme': 'dark'}}%%
 graph LR
 
-    1((1)) --&gt; data["fa:fa-database Data "];
-    2((2)) --&gt; preproc["fa:fa-scissors Preprocess "];
-    3((3)) --&gt; stats["fa:fa-superscript Statistics. "];
-    4((4)) --&gt; path["fa:fa-flask Pathway "];
-    5((5)) --&gt; clust["fa:fa-snowflake-o Cluster "];
-    6((6)) --&gt; multi["fa:fa-codepen Multivariate."];
-    7((7)) --&gt; ml["fa:fa-university Model."];
-    8((8)) --&gt; net["fa:fa-share-alt Network ."];
-    9((9)) --&gt; report["fa:fa-file-text-o Report "];
+    1((1)) --&gt; data["fa:fa-database Data #9679;"];
+    2((2)) --&gt; preproc["fa:fa-scissors Preprocess #9679;"];
+    3((3)) --&gt; stats["fa:fa-superscript Statistics #9679;"];
+    4((4)) --&gt; path["fa:fa-flask Pathway #9679;"];
+    5((5)) --&gt; clust["fa:fa-snowflake-o Cluster #9679;"];
+    6((6)) --&gt; multi["fa:fa-codepen Multivariate #9679;"];
+    7((7)) --&gt; ml["fa:fa-university Model #9679;"];
+    8((8)) --&gt; net["fa:fa-share-alt Network #9679;"];
+    9((9)) --&gt; report["fa:fa-file-text-o Report #9679;"];
     vis["fa:fa-braille Plot."];
     data --&gt; 2;
     preproc --&gt; 3;
@@ -579,8 +589,8 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
       </a>          
   </div>
   <div class="nav-page nav-page-next">
-      <a href="../partial/data.html" class="pagination-link">
-        <span class="nav-page-text"><span class="chapter-number">1</span>&nbsp; <span class="chapter-title">Data</span></span> <i class="bi bi-arrow-right-short"></i>
+      <a href="../partial/courses.html" class="pagination-link">
+        <span class="nav-page-text">Training courses</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
