--- a/docs/partial/courses.html
+++ b/docs/partial/courses.html
@@ -102,6 +102,11 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../partial/install.html" class="sidebar-item-text sidebar-link">Install</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../partial/getting_started.html" class="sidebar-item-text sidebar-link">Introduction</a>
   </div>
 </li>
@@ -196,7 +201,7 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>Check out all <a href="https://creativedatasolutions.github.io/CDS.courses/">courses</a>.</p>
+<p>Check out all <a href="https://creativedatasolutions.github.io/CDS.courses/">courses</a></p>
 
 
 
