--- a/docs/partial/courses.html
+++ b/docs/partial/courses.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>dave.docs - Training courses</title>
+<title>dave.docs - Tutorials</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -72,7 +72,7 @@ ul.task-list li input[type="checkbox"] {
   <header id="quarto-header" class="headroom fixed-top">
   <nav class="quarto-secondary-nav" data-bs-toggle="collapse" data-bs-target="#quarto-sidebar" aria-controls="quarto-sidebar" aria-expanded="false" aria-label="Toggle sidebar navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
     <div class="container-fluid d-flex justify-content-between">
-      <h1 class="quarto-secondary-nav-title">Training courses</h1>
+      <h1 class="quarto-secondary-nav-title">Tutorials</h1>
       <button type="button" class="quarto-btn-toggle btn" aria-label="Show secondary navigation">
         <i class="bi bi-chevron-right"></i>
       </button>
@@ -122,7 +122,7 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link active">Training courses</a>
+  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link active">Tutorials</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -180,14 +180,20 @@ ul.task-list li input[type="checkbox"] {
 </nav>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#check-out-all-courses" id="toc-check-out-all-courses" class="nav-link active" data-scroll-target="#check-out-all-courses">Check out all courses</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title d-none d-lg-block">Training courses</h1>
+<h1 class="title d-none d-lg-block">Tutorials</h1>
 </div>
 
 
@@ -201,9 +207,23 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-<p>Check out all <a href="https://creativedatasolutions.github.io/CDS.courses/">courses</a></p>
+<div class="columns">
+<div class="column">
+<section id="network-mapping-101" class="level2">
+<h2 class="anchored" data-anchor-id="network-mapping-101"><a href="https://creativedatasolutions.github.io/CDS.courses/courses/network_mapping_101/docs/">Network mapping 101</a></h2>
+<section id="from-zero-to-hero-raw-data-to-mapped-networks" class="level4">
+<h4 class="anchored" data-anchor-id="from-zero-to-hero-raw-data-to-mapped-networks">From zero to hero: raw data to mapped networks</h4>
+</section>
+</section>
+</div><div class="column">
+<p><img src="img/courses/network_maping_101.png" class="bordered img-fluid"></p>
+</div>
+</div>
+<section id="check-out-all-courses" class="level3">
+<h3 class="anchored" data-anchor-id="check-out-all-courses">Check out all <a href="https://creativedatasolutions.github.io/CDS.courses/">courses</a></h3>
 
 
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
