--- a/docs/partial/preprocess.html
+++ b/docs/partial/preprocess.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head>
 
 <meta charset="utf-8">
-<meta name="generator" content="quarto-1.0.38">
+<meta name="generator" content="quarto-1.1.251">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
@@ -11,10 +11,15 @@
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
-span.underline{text-decoration: underline;}
-div.column{display: inline-block; vertical-align: top; width: 50%;}
+div.columns{display: flex; gap: min(4vw, 1.5em);}
+div.column{flex: auto; overflow-x: auto;}
 div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
 ul.task-list{list-style: none;}
+ul.task-list li input[type="checkbox"] {
+  width: 0.8em;
+  margin: 0 0.8em 0.2em -1.6em;
+  vertical-align: middle;
+}
 </style>
 
 
@@ -97,6 +102,11 @@ ul.task-list{list-style: none;}
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
+  <a href="../partial/install.html" class="sidebar-item-text sidebar-link">Install</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
   <a href="../partial/getting_started.html" class="sidebar-item-text sidebar-link">Introduction</a>
   </div>
 </li>
@@ -108,6 +118,11 @@ ul.task-list{list-style: none;}
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
   <a href="../partial/workflows.html" class="sidebar-item-text sidebar-link">Workflows</a>
+  </div>
+</li>
+        <li class="sidebar-item">
+  <div class="sidebar-item-container"> 
+  <a href="../partial/courses.html" class="sidebar-item-text sidebar-link">Training courses</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -165,17 +180,17 @@ ul.task-list{list-style: none;}
 </nav>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        <nav id="TOC" role="doc-toc">
+        <nav id="TOC" role="doc-toc" class="toc-active">
     <h2 id="toc-title">On this page</h2>
    
   <ul>
   <li><a href="#merge" id="toc-merge" class="nav-link active" data-scroll-target="#merge"><span class="txbox_green">Merge</span></a>
-  <ul class="collapse">
+  <ul>
   <li><a href="#calculate" id="toc-calculate" class="nav-link" data-scroll-target="#calculate"><span class="txbox_gray">Calculate</span></a></li>
   <li><a href="#explore-and-plot" id="toc-explore-and-plot" class="nav-link" data-scroll-target="#explore-and-plot"><span class="txbox_gray">Explore</span> and <span class="txbox_gray">Plot</span></a></li>
   </ul></li>
   <li><a href="#missing" id="toc-missing" class="nav-link" data-scroll-target="#missing"><span class="txbox_green">Missing</span></a>
-  <ul class="collapse">
+  <ul>
   <li><a href="#calculate-1" id="toc-calculate-1" class="nav-link" data-scroll-target="#calculate-1"><span class="txbox_gray">Calculate</span></a></li>
   <li><a href="#explore-and-plot-1" id="toc-explore-and-plot-1" class="nav-link" data-scroll-target="#explore-and-plot-1"><span class="txbox_gray">Explore</span> and <span class="txbox_gray">Plot</span></a></li>
   </ul></li>
@@ -395,7 +410,8 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   for (var i=0; i<noterefs.length; i++) {
     const ref = noterefs[i];
     tippyHover(ref, function() {
-      let href = ref.getAttribute('href');
+      // use id or data attribute instead here
+      let href = ref.getAttribute('data-footnote-href') || ref.getAttribute('href');
       try { href = new URL(href).hash; } catch {}
       const id = href.replace(/^#\/?/, "");
       const note = window.document.getElementById(id);
